# minigng

./: .gitignore  README.md  example.py  minigng.py  pyproject.toml  requirements.txt  setup.cfg
minigng/: __init__.py  _growing_neural_gas.py
