[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "minigng"
authors = [
    {name = "Elio Ventocilla"},
]
version = "0.0.2"
description = "A minimum implementation of the Growing Neural Gas"
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
]

[project.optional-dependencies]
example = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pydot>=3.0.4",
    "scipy>=1.15.2",
]

[tool.setuptools]
packages = ["minigng"]