[metadata]
name = minigng
version = 0.0.1
description = A implementation of the Growing Neural Gas (with some updates)
long_description = file: README.md
keywords = GNG, clustering
license = BSD 3-Clause License

[options]
include_package_data = True
packages = find:
install_requires =
    numpy>=1.20.1